# mappi

./: CMakeLists.txt  README.md  mappi_plugin.xml  nano_mppic_plugin.xml  package.xml
cfg/: MaPPI.cfg  NanoMPPIc.cfg
config/: mappi_controller.yaml  mappi_local_planner.yaml  nav2.yaml  nav2_custom.yaml  nav2_ona.yaml  navfn_wrapper_params.yaml
config/bt/: navigate_to_pose_w_replanning_and_recovery.xml
include/: Controller.hpp  CostmapAdapter.hpp  GuidanceWrapper.hpp  HybridAStarWrapper.hpp  NavFnWrapper.hpp  OdomHelper.hpp  ParametersHandler.hpp  ROSutils.hpp  Visualizer.hpp
include/nano_mppic/: Predictor.hpp
include/nano_mppic/Critics/: Critic.hpp  Obstacles.hpp
include/nano_mppic/Models/: Ackermann.hpp  Holonomic.hpp  MotionModel.hpp
include/nano_mppic/Utils/: NoiseGenerator.hpp
launch/: bringup_launch.py  dummy_pipeline.launch.py  main.launch.py  nav2.launch.py  pipeline.launch.py  turtlebot3.launch.py
mappi/include/: mppic.hpp
mappi/include/Critics/: Critic.hpp  Forward.hpp  Goal.hpp  GoalAngle.hpp  Obstacles.hpp  PathAngle.hpp  PathDist.hpp  PathFollow.hpp  Twirling.hpp
mappi/include/Models/: Ackermann.hpp  BicycleKin.hpp  BicycleKinRear.hpp  Holonomic.hpp  MotionModel.hpp  SteeringBased.hpp
mappi/include/Objects/: Config.hpp  ControlSequence.hpp  State.hpp  Trajectory.hpp
mappi/include/Utils/: Auxiliar.hpp  CostmapInterface.hpp  Filters.hpp  NoiseGenerator.hpp  SharedPtr.hpp  SplineAdaptor.hpp
mappi/include/Utils/Filters/: LowPass.hpp  SavitskyGolay.hpp
mappi/include/Utils/Splines/: BaseSpline.hpp  CubicBSpline.hpp  SplineAdaptor.hpp
mappi/src/: mppic.cpp
mappi/src/Critics/: Forward.cpp  Goal.cpp  GoalAngle.cpp  Obstacles.cpp  PathAngle.cpp  PathDist.cpp  PathFollow.cpp  Twirling.cpp
mappi/src/Utils/: NoiseGenerator.cpp
mappi/src/Utils/Filters/: LowPass.cpp  SavitskyGolay.cpp
mappi/src/Utils/Splines/: BaseSpline.cpp  CubicBSpline.cpp
nano_mppic/include/: Predictor.hpp  mppic.hpp
nano_mppic/include/Critics/: Critic.hpp  Goal.hpp  GoalAngle.hpp  Obstacles.hpp  PathAngle.hpp  PathDist.hpp  PathFollow.hpp  Twirling.hpp
nano_mppic/include/Models/: Ackermann.hpp  Holonomic.hpp  MotionModel.hpp  SteeringBased.hpp
nano_mppic/include/Objects/: Config.hpp  ControlSequence.hpp  State.hpp  Trajectory.hpp
nano_mppic/include/Utils/: Auxiliar.hpp  CubicBSpline.hpp  NoiseGenerator.hpp  SharedPtr.hpp  SplineAdaptor.hpp
nano_mppic/include/Utils/Splines/: BaseSpline.hpp  CubicBSpline.hpp
nano_mppic/src/: Predictor.cpp  mppic.cpp
rviz/: nav2.rviz
src/: Controller.cpp  CostmapAdapter.cpp  ParametersHandler.cpp
