<?xml version="1.0"?>
<package format="2">
  <name>nano_mppic</name>
  <version>0.0.0</version>
  <description>The nano_mppic package</description>

  <maintainer email="oriol.martinez.fite@gmail.com">fetty</maintainer>
  <author email="oriol.martinez.fite@gmail.com">fetty</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/nano_mppic_plugin.xml" />
  </export>
</package>