<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mappi</name>
  <version>0.0.0</version>
  <description>The mappi package</description>

  <maintainer email="oriol.martinez.fite@gmail.com">fetty</maintainer>
  <author email="oriol.martinez.fite@gmail.com">fetty</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_common</depend>
  <depend>nav2_ros_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>std_srvs</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/mappi_plugin.xml" />
  </export>
</package>